--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Connect 4</title>
-    <link href="connect4.css" rel="stylesheet" />
+    <title>Connect 4 :)</title>
+    <link href="src/css/connect4.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
-
   <body>
-    <div id="game">
-      <table id="board"></table>
+    <div class="container">
+      <div class="heading">
+        <h1>
+          <span>C</span>
+          <span>o</span>
+          <span>n</span>
+          <span>n</span>
+          <span>e</span>
+          <span>c</span>
+          <span>t</span>
+          <span>&nbsp;</span>
+          <span>F</span>
+          <span>o</span>
+          <span>u</span>
+          <span>r</span>
+        </h1>
+        <p id="msg-container" class="msg-won"></p>
+      </div>
+      <div id="game">
+        <table id="board"></table>
+      </div>
+      <button onclick="resetGame()">Restart game</button>
+      <script src="src/js/connect4.js"></script>
     </div>
-
-    <script src="connect4.js"></script>
   </body>
 </html>
